--- a/RobinsonEmanuelLopezLatin/front/index.html
+++ b/RobinsonEmanuelLopezLatin/front/index.html
@@ -20,7 +20,7 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-md-4"></div>
+            <div class="col-md-3"></div>
             <div class="col-md-2 borde-azul">
                 <div class="carta-formulario">
                     <i class="bi bi-person-fill-add icon-menu"></i>
@@ -35,7 +35,14 @@
                     <a href="view/reportes_view.html" class="btn btn-outline-success">Ver Reporte <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-2 borde-azul">
+                <div class="carta-formulario">
+                    <i class="bi bi-speedometer2 icon-menu"></i>
+                    <p>Punteo</p>
+                    <a href="view/ingresar_punteo.html" class="btn btn-outline-primary">Ir a la asignación <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <script src="bootstrap5/js/bootstrap.js"></script>
